Fixed #4629: Horizontal scrolling images on a mobile device broken

--- a/static/less/file.less
+++ b/static/less/file.less
@@ -113,6 +113,8 @@ ul.files {
 
         img {
             max-width: 190px;
+            height:100px;
+            width:auto;
         }
     }
 }
